[package]
name = "dioxus-use-storage"
version = "0.4.0"
authors = ["Aster <192607617@qq.com>"]
description = "`use_storage` hooks for dioxus"
repository = "https://github.com/YousofMersal/dioxus-hooks"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dioxus = "0.4.0"
gloo-events = "0.1.2"
log = "0.4.17"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = ["Window", "Storage", "StorageEvent"]


[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
